# RAG

./: main.py  pyproject.toml
docs/: Google.txt  Microsoft.txt  Nvidia.txt  SpaceX.txt  Tesla.txt
notebooks/: injection.ipynb
